--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "rag-cli-system": "./src/app.js"
   },
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node --max-old-space-size=8192 src/app.js",
+    "search": "node --max-old-space-size=8192 src/app.js search",
+    "dev": "node --max-old-space-size=8192 src/app.js"
   },
   "pkg": {
     "targets": [
