✨ 進捗表示オプション化とユーザビリティ向上
🎯 新機能:
- search-quiet コマンド追加（簡易ログ出力）
- verbose オプションによる進捗表示制御
- npm run search-quiet スクリプト追加

🔧 最適化:
- すべての関数でverboseパラメータ対応
- 条件分岐による効率的なログ出力
- メモリ使用量監視の最適化

📝 改善点:
- 詳細ログ/簡易ログの使い分け可能
- 本番環境での簡潔な出力
- デバッグ時の詳細な進捗確認
- ヘルプメッセージの更新

🚀 パフォーマンス:
- ログ出力コストの削減
- 用途に応じた柔軟な実行モード

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node --max-old-space-size=8192 src/app.js",
     "search": "node --max-old-space-size=8192 src/app.js search",
+    "search-quiet": "node --max-old-space-size=8192 src/app.js search-quiet",
     "dev": "node --max-old-space-size=8192 src/app.js"
   },
   "pkg": {
